--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ cursor: pointer;
 
 .titles {
 font-size: 24px;
-list-style-type: none;
+list-style-type: 1;
 }
 
 .descriptions {
@@ -120,9 +120,7 @@ font-weight: bold;
 }
 
 .buttonLeft1:hover{
-background-color:#21409A;
-color:white;
-transition-delay: 100ms;
+transform: scale(1.1);
 }
 
 .buttonLeft2 {
@@ -130,9 +128,7 @@ font-weight: bold;
 }
 
 .buttonLeft2:hover{
-background-color: white;
-color:#21409A;
-transition-delay: 100ms;
+transform: scale(1.1);
 }
 
 .buttonLeft2, .buttonLeft1 {
